tests/diagnostics/expressions/boolean_operators/operand_not_boolean/expect.txt
# exit: 1
input/main.lang0:2:12: error: boolean operators require boolean operands
      return 1 and true
             ^
